@@ -27,5 +27,6 @@ project (GNC) : boost_base, cuts_gme, xsc_cxx, xscrt, cutsexe {
     gendir = .
 
     $(CUTS_ROOT)/etc/schemas/naomi/attribute_simple.xsd
+    $(CUTS_ROOT)/etc/schemas/naomi/interface.xsd
   }
 }
